# capm-dashboard

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Project.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/capm/: __init__.py  config.py  main.py
src/capm/api/: deps.py  routes.py
src/capm/application/: __init__.py  adapters.py  beta_models.py  engine.py  sync_service.py
src/capm/domain/: __init__.py  interfaces.py  repositories.py
src/capm/infrastructure/: templates.py
